--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </br>
     <h2> Disponibilité : La chambre bleue est disponible au 09/07 et la chambre verte sera libre au 03/09</h2>
 
-    <p>Bonjour test,
+    <p>Bonjour,
 
         Je vous propose à la location une chambre en colocation (de 3 personnes) dans cet agréable T4 de 65 m² entièrement meublé et équipé, rénovation récente et de qualité.
 
