--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     </br>
-    <h2> Disponibilité : La chambre bleue est disponible au 09/07 et la chambre verte sera libre au 03/09</h2>
+    <h2> Disponibilité : Actuellement plus aucune chambre n'est disponible (Mis à jour le 11/07/2022) </h2>
 
     <p>Bonjour,
 
@@ -83,7 +83,7 @@
 
         Il est situé au 1er étage dans une résidence de 4 étages, sécurisée avec badge.
 
-        Actuellement le logement est occupé par Sébastian, 29ans, ingénieur dans le bâtiment, Samuel, 25ans, en alternance dans le commerce et Maxime qui quitte la colocation et laisse donc sa place.
+        Actuellement le logement est occupé par Sébastian, 29ans, ingénieur dans le bâtiment, Kristen, 20ans, en alternance dans le secteur génie biologique commerce et Théophile, 24ans, en master au CNAM.
 
         Convient idéalement aux jeunes actifs ou encore aux étudiants, la chambre sera disponible à partir du 09 Juillet.
 
@@ -111,11 +111,11 @@
 
         <strong><u>LOYER - DÉTAILS :</strong></u>
 
-        Le loyer est de 280€ auxquels s'ajoute 65€ de charges comprenant tout : l’eau (chaude et froide), l’électricité, chauffage (gaz), ménage des communs, internet, taxe d'ordure ménagère et entretien de la chaudière.
+        Le loyer est de 280€ auxquels s'ajoute 60€ de charges comprenant tout : l’eau (chaude et froide), l’électricité, chauffage (gaz), ménage des communs, internet, taxe d'ordure ménagère et entretien de la chaudière.
         Bail individuel. Logement éligible aux APL.
         Dépôt de garantie : 280€. Aucun frais d'agence.
 
-        Disponible à partir du 09 Juillet
+        Actuellement plus aucune chambre disponible
 
         Pour une demande de visite ou toutes questions supplémentaires, contactez-moi par mail en précisant votre nom, prénom et situation (salarié, étudiant ..) ou par téléphone.
 
