--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
         Il est situé au 1er étage dans une résidence de 4 étages, sécurisée avec badge.
 
-        Actuellement le logement est occupé par Sébastian, 29ans, ingénieur dans le bâtiment, Kristen, 20ans, en alternance dans le secteur génie biologique commerce et Théophile, 24ans, en master au CNAM.
+        Actuellement le logement est occupé par Sébastian, 29ans, ingénieur dans le bâtiment, Kristen, 20ans, en alternance dans le secteur génie biologique et Théophile, 24ans, en master au CNAM.
 
-        Convient idéalement aux jeunes actifs ou encore aux étudiants, la chambre sera disponible à partir du 09 Juillet.
+        Convient idéalement aux jeunes actifs ou encore aux étudiants.
 
         <strong><u>LOCALISATION :</strong></u>
 
