--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     </br>
-    <h2> Disponibilité : Actuellement plus aucune chambre n'est disponible (Mis à jour le 11/07/2022) </h2>
+    <h2> Disponibilité : La chambre verte sera disponible dès le 15/10 et la chambre bleue à partir du 01/11 (MAJ le 28/09/2022) </h2>
 
     <p>Bonjour,
 
@@ -83,9 +83,9 @@
 
         Il est situé au 1er étage dans une résidence de 4 étages, sécurisée avec badge.
 
-        Actuellement le logement est occupé par Sébastian, 29ans, ingénieur dans le bâtiment, Kristen, 20ans, en alternance dans le secteur génie biologique et Théophile, 24ans, en master au CNAM.
+        Actuellement le logement est occupé par Sébastian, 29ans, ingénieur dans le bâtiment, Jean-Victor, 24ans, en étude supérieur et Théophile, 24ans, qui quitte le logement.
 
-        Convient idéalement aux jeunes actifs ou encore aux étudiants.
+        Convient idéalement aux jeunes actifs.
 
         <strong><u>LOCALISATION :</strong></u>
 
@@ -111,11 +111,9 @@
 
         <strong><u>LOYER - DÉTAILS :</strong></u>
 
-        Le loyer est de 280€ auxquels s'ajoute 60€ de charges comprenant tout : l’eau (chaude et froide), l’électricité, chauffage (gaz), ménage des communs, internet, taxe d'ordure ménagère et entretien de la chaudière.
+        Le loyer est de 280€ auxquels s'ajoute 65€ de charges comprenant tout : l’eau (chaude et froide), l’électricité, chauffage (gaz), ménage des communs, internet, taxe d'ordure ménagère et entretien de la chaudière.
         Bail individuel. Logement éligible aux APL.
         Dépôt de garantie : 280€. Aucun frais d'agence.
-
-        Actuellement plus aucune chambre disponible
 
         Pour une demande de visite ou toutes questions supplémentaires, contactez-moi par mail en précisant votre nom, prénom et situation (salarié, étudiant ..) ou par téléphone.
 
